# mist

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  cog.toml  devbox.json  package-lock.json  package.json
.github/: labeler.yml
.github/workflows/: ci.yml  pr-check-signed.yml  pr-labeler.yml  release.yml
api/: Cargo.toml
api/src/: app.rs  lib.rs  state.rs
api/src/handlers/: keys.rs  services.rs
api/src/handlers/keys/: create.rs  destroy.rs  get.rs  list.rs  preferred.rs  update.rs  value.rs
api/src/handlers/services/: create.rs  destroy.rs  get.rs  list.rs  update.rs
authn/: Cargo.toml
authn/src/: app.rs  crypto.rs  handlers.rs  state.rs  webhooks.rs
common/: Cargo.toml
common/src/: crypto.rs  env.rs  error.rs  lib.rs
db/: Cargo.toml  schema.sql
db/.sqlx/: lib.rs  query-0003f7e2d37209658c49dc30345821d535778d6385b6bba20a434dd614fcf059.json  query-1df948bdf5841363478d09617ac58883fd0f7f0d2ef588417fc8d16ed22b19f1.json  query-23db55b81f4dfac829b7e5327e49915f3a9c1fe0718133dec0d4d99ffc9e2e8d.json  query-48c5001d8a5b15e57b37282ed3ac1b79113441156dc9166c83a0a93e91c12229.json  query-57df28c1e99ffd6c2d1f9bf561210792f3ffbdfafc4ddc2f08231b7264d6fe87.json  query-5eddd4e88b12c4985f250a57eca7b7d7e3636a48fc23d59b292b6a1cb158398d.json  query-6f48db2b0e00fcbb72c41bf0de202998f5a5f3722dff3d407b655c94d44e28de.json  query-70b2732d03b4f7831588b600bd2567ba8acc7d853453a323a1c8bd1661861718.json  query-788d7402d01f7ddfc6dfdcf1d68730a5dcc07cddbcae5823e1a1cf11f20d446f.json  query-83b6c2df5ddea3b89bccef580303d6b543ac4be91c7cb6066766fc2b05b39d3b.json  query-92525eeb0416a8d544b9f7a50bef04ba8a3ad371b81a64acc47b6bb436952f44.json  query-a4dbf9f8dea8898b8b0be76c7d039eb20361e31c299b26efd170279c9a03d20d.json  query-e754fd6f1206706dbf68028d6683e6262e5610882fdb3d35d95ba187a22d3292.json  query-f36efd4d9f41dc2ba3115bf6cc9a0677e44edd481daf0526bb3e4ac229e2838f.json  query-f586092886b4dbe6d71a1314e3ba4738a9313550ceff8486a753715bc60ee005.json  query-f641e6a140722241ad53f7a9cec851a8d95bc19c3b091f38f1ec34121ed83a70.json
db/migrations/: 20240904191112_create_services.down.sql  20240904191112_create_services.up.sql  20240907144956_create_keys.up.sql  20240908190419_create_users.down.sql  20240908190419_create_users.up.sql  20240908190542_create_identifiers.down.sql  20240908190542_create_identifiers.up.sql
db/sql/definitions/: create.sql
db/sql/identifiers/: create.sql
db/sql/keys/: bump-priority.sql  update.sql
db/sql/services/: create.sql  destroy.sql  get.sql  get_default_definition.sql  update.sql
db/sql/users/: get.sql
db/src/: lib.rs  models.rs  repos.rs
db/src/models/: definition.rs  identifier.rs  key.rs  service.rs  user.rs
db/src/repos/: definitions.rs  identifiers.rs  keys.rs  services.rs  users.rs
demo/: .env.example  Caddyfile  Cargo.toml  Dockerfile  fly.demo.toml  fly.mist.toml
demo/scripts/: deploy.sh  start.sh
demo/src/: main.rs
deploy/: Dockerfile
dev/: docker-compose.yml
dev/devbox/: hello.sh  init-postgres.sh  process-compose.yml
dev/just/: api.just  db.just
docs/: introduction.mdx  mint.json
docs/api/: openapi.json
docs/api-reference/: openapi.json
docs/contributing/: set-up.mdx
docs/deploying/: docker.mdx
example/: Cargo.toml
example/src/: main.rs
local/: docker-compose.yml
mist/api/: Cargo.toml
mist/api/src/: app.rs  handlers.rs  lib.rs  state.rs
mist/api/src/handlers/: keys.rs  services.rs
mist/api/src/handlers/keys/: create.rs  destroy.rs  get.rs  list.rs  preferred.rs  update.rs  value.rs
mist/api/src/handlers/services/: create.rs  destroy.rs  get.rs  list.rs  update.rs
mist/api/src/middleware/: auth.rs
mist/authn/: Cargo.toml
mist/authn/src/: app.rs  crypto.rs  events.rs  handlers.rs  lib.rs  session.rs  state.rs  utils.rs  views.rs  webhooks.rs
mist/authn/src/handlers/: complete_registration.rs  kill.rs  kill_session.rs  start_auth.rs  verify.rs  verify_response.rs  wait.rs  wait_for_completion.rs  webhook.rs  who.rs  whoami.rs
mist/authn/src/utils/: oidc.rs  redis.rs  sphereon.rs
mist/authn/src/views/: scan.rs
mist/authn/src/webhooks/: registration.rs
mist/common/: Cargo.toml
mist/common/src/: crypto.rs  env.rs  lib.rs  redis.rs
mist/db/: Cargo.toml
mist/db/.sqlx/: query-07c48a8ec4d9b97a81a447e9cdceea1dcf074c062edc410988ceef7add624a9a.json  query-3de57f152cdf59da93fd38129cd6b463d2eb6ccdc4eb65768170b002d241907b.json  query-3e0695d175a688c042afb9afb48e2a7556215d9f8af7d6738ce9f88ce0bf4879.json  query-8b6b93c868f78efb59bfb73cf69054190098399644896f17e67f4c5d6e6fbaf3.json  query-92525eeb0416a8d544b9f7a50bef04ba8a3ad371b81a64acc47b6bb436952f44.json  query-92b4489cd70f402be3a5d7c8008644107bcdd1e954fe5a1c577185f318c0c1e5.json  query-96121cb75106fb1f9e978fdac43dac0b0af70f27a28df80e8344d3a3e257ddf7.json  query-a435f12f52e021778d0cd023b01c9a93d151b278378557e6f4003ce660268998.json  query-e754fd6f1206706dbf68028d6683e6262e5610882fdb3d35d95ba187a22d3292.json  query-f36efd4d9f41dc2ba3115bf6cc9a0677e44edd481daf0526bb3e4ac229e2838f.json
mist/db/migrations/: 20240904163543_create_extension_uuid.down.sql  20240904163543_create_extension_uuid.up.sql  20240904191026_create_set_updated_at_func.down.sql  20240904191026_create_set_updated_at_func.up.sql  20240904191112_create_services.up.sql  20240907144956_create_keys.down.sql  20240908211024_create_definitions.down.sql  20240908211024_create_definitions.up.sql
mist/db/sql/identifiers/: get.sql  get_by_value.sql
mist/db/sql/keys/: create.sql  destroy.sql  get.sql  has-active-key-of-kind.sql  list.sql  preferred.sql
mist/db/sql/services/: get_by_name.sql  list.sql
mist/db/sql/users/: create.sql
mist/db/src/models/: definition.rs  identifier.rs  key.rs  service.rs  user.rs
mist/db/src/repos/: identifiers.rs  keys.rs  services.rs  users.rs
mist/jobs/: Cargo.toml
mist/jobs/src/: jobs.rs  lib.rs
mist/jobs/src/jobs/: webhooks.rs
mist/jobs/src/runners/: webhooks.rs
mist/runner/: Cargo.toml
mist/runner/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
(+18 files in other folders)
