[package]
name = "runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
authn = { path = "../authn" }
axum = "0.7.5"
common = { path = "../common" }
envy = "0.4.2"
sqlx = { version = "0.8.2", features = ["migrate"] }
tokio = { version = "1.40.0", features = ["rt"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
