[package]
name = "mist_api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum_garde = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
constant_time_eq = "0.3.1"
eyre = "0.6.12"
garde = { version = "0.20.0", features = ["full"] }
hex = "0.4.3"
mist_common = { path = "../common" }
mist_db = { path = "../db" }
mockall = "0.13.0"
secstr = "0.5.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5.0", features = ["util"] }
