[package]
name = "jobs"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-nats = "0.36.0"
bytes = "1.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
common = { path = "../common" }
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
