[package]
name = "mist_runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
envy = "0.4.2"
mist_api = { path = "../api" }
mist_authn = { path = "../authn" }
mist_common = { path = "../common" }
mist_jobs = { path = "../jobs" }
sqlx = { version = "0.8.2", features = ["migrate", "postgres"] }
tokio = { version = "1.40.0", features = ["rt"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
